Added QODHistory route and tests for QOD routes
