# handlers/structs.go
@@ -67,6 +67,8 @@ type QuoteView struct {
 	Nroficelandicquotes int `json:"nroficelandicquotes"`
 	//swagger:ignore
 	Nrofenglishquotes int `json:"nrofenglishquotes"`
+	//swagger:ignore Date
+	Date string `json:"date"`
 }
 
 type ListItem struct {
@@ -89,6 +91,23 @@ type Request struct {
 	MaxQuotes    int         `json:"maxQuotes"`
 	OrderConfig  OrderConfig `json:"orderConfig"`
 	Date         string      `json:"date"`
+	Minimum      string      `json:"minimum"`
+	Maximum      string      `json:"maximum"`
+	Qods         []Qod       `json:"qods"`
+}
+
+type Qod struct {
+	// the date for which this quote is the QOD, if left empty this quote is today's QOD.
+	//
+	// Example: 12-22-2020
+	Date string `json:"date"`
+	// The id of the quote to be set as this dates QOD
+	//
+	// Example: 1
+	Id int `json:"id"`
+	// The language of the QOD
+	// Example: icelandic
+	Language string `json:"language"`
 }
 
 type OrderConfig struct {
